Translate on date-picker component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,6 +5,11 @@
     },
 
     "datepicker": {
-        "text": "Start Date"
+        "text-start": "Start Date",
+        "text-end": "End Date"
+    },
+
+    "warning": {
+        "message-dates": "The start date must be predecessor to end date!"
     }
 }
