Updating the table header

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -9,6 +9,11 @@
         "text-end": "End Date"
     },
 
+    "table": {
+      "date": "Date",
+      "value": "Value"
+  },
+
     "warning": {
         "message-dates": "The start date must be predecessor to end date!"
     }
